--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,6 +11,7 @@
     "lint:style": "sass-lint -v -q",
     "lint:es": "eslint --config .eslintrc src",
     "lint": "npm run lint:es && npm run lint:style",
+    "upgrade-component-objects": "./scripts/upgrade-component-objects.js",
     "prepublish": "babel -d lib ./src/ && rimraf lib/**/*.test.js && cpx \"./src/**/*.scss\" lib",
     "start": "start-storybook -p 6006",
     "storybook": "start-storybook -p 6006",
