--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,7 +11,8 @@
     "lint:style": "sass-lint -v -q",
     "lint:es": "eslint --config .eslintrc src",
     "lint": "npm run lint:es && npm run lint:style",
-    "prepublish": "./scripts/upgrade-component-objects.js && babel -d lib ./src/ && rimraf lib/**/*.test.js && cpx \"./src/**/*.scss\" lib",
+    "prepublish": "babel -d lib ./src/ && rimraf lib/**/*.test.js && cpx \"./src/**/*.scss\" lib",
+    "postpublish": "./scripts/upgrade-component-objects.js",
     "start": "start-storybook -p 6006",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
